add page-side component. add article & dashboard article

--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -51,6 +51,9 @@
       }, {
         'title': 'News',
         'href': 'dashboard-news.html'
+      }, {
+        'title': 'Article News',
+        'href': 'dashboard-news-article.html'
       }
     ]
   %}
