--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -78,6 +78,7 @@ $media-expressions: (
   --color-blue-60: hsl(221, 83%, 18%);
   --color-blue-70: hsl(221, 90%, 15%);
   --color-blue-80: hsl(221, 93%, 12%);
+   --color-blue-85: hsl(221, 92%, 10%);
   --color-blue-90: hsl(220, 92%, 10%);
   --color-blue-100: hsl(222, 89%, 7%);
   --color-grey-blue-10: hsl(223, 21%, 28%);
@@ -85,12 +86,13 @@ $media-expressions: (
   --color-orange-30: hsl(25, 98%, 62%);
   --color-orange-50: hsl(22, 90%, 59%);
   --color-green-30: hsl(140, 81%, 40%);
-  // --c: #152B5B;
+  // --c: #02102f;
 
   --grad-blue: linear-gradient(86.88deg, #00c6fb 1.95%, #005bea 97.83%);
   --grad-orange: linear-gradient(271.95deg, #fb7e37 14.29%, #ff9a44 98.96%);
   --grad-orange-10: linear-gradient(53.13deg, #c07945 3.66%, #fa7e37 92.94%);
   --grad-orange-20: linear-gradient(90deg, #f83600 0%, #f9d423 100%);
+  --radial-blue: radial-gradient(123.22% 129.67% at 100.89% -5.6%, #02143b 0%, #01123a 100%);
 
   // Fonts
   --font-sans-serif: 'Montserrat', Helvetica, sans-serif;
