--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -12,6 +12,8 @@
 @import 'social-list';
 @import 'icon';
 @import 'card-filter';
+@import 'page-side';
+@import 'article';
 @import 'landing/header';
 @import 'landing/footer';
 @import 'dashboard/footer';
