--- a/assets/html/partials/components/dashboard/page-side.njk
+++ b/assets/html/partials/components/dashboard/page-side.njk
@@ -1,12 +1,12 @@
 {% macro pageSide(side) %}
   <aside class="cs--page-side">
     <h3 class="cs--page-side__title">{{ side.title }}</h3>
-    {% for item in side.itemList %}
-      <ul class="cs--page-side__item-list">
+    <ul class="cs--page-side__item-list">
+      {% for item in side.itemList %}
         <li class="cs--page-side__item">
-          <a href="item.link" class="cs--page-side__link">{{ item.title }}</a>
+          <a href="item.link" class="cs--page-side__link {{ 'cs--page-side__link--accent' if item.accent }}">{{ item.title }}</a>
         </li>
-      </ul>
-    {% endfor %}
+      {% endfor %}
+    </ul>
   </aside>
 {% endmacro %}
