--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -69,6 +69,7 @@ $media-expressions: (
   --color-grey-70: hsl(0, 0%, 45%);
   --color-grey-80: hsl(0, 0%, 40%);
   --color-grey-100: hsl(0, 0%, 13%);
+  --color-light-blue-50: hsl(206, 78%, 78%);
   --color-blue: hsl(210, 100%, 60%);
   --color-blue-10: hsl(195, 100%, 49%);
   --color-blue-20: hsl(197, 100%, 48%);
@@ -86,7 +87,7 @@ $media-expressions: (
   --color-orange-30: hsl(25, 98%, 62%);
   --color-orange-50: hsl(22, 90%, 59%);
   --color-green-30: hsl(140, 81%, 40%);
-  // --c: #02102f;
+  // --c: #F57D38;
 
   --grad-blue: linear-gradient(86.88deg, #00c6fb 1.95%, #005bea 97.83%);
   --grad-orange: linear-gradient(271.95deg, #fb7e37 14.29%, #ff9a44 98.96%);
