--- a/assets/scss/components/article.scss
+++ b/assets/scss/components/article.scss
@@ -2,6 +2,9 @@
   padding: 30px 35px 55px;
   background-color: var(--color-blue-85);
   box-shadow: 0px 0px 30px rgba(31, 85, 134, 0.15);
+  @include media('<sm') {
+    padding: 15px;
+  }
   &__nav {
     display: flex;
     align-items: center;
@@ -9,6 +12,11 @@
     .cs--btn {
       width: 120px;
       font-size: 12px;
+      @include media('<sm') {
+        width: auto;
+        padding: 8px 16px;
+        border-radius: 25px;
+      }
     }
   }
   &__content {
@@ -19,6 +27,10 @@
       font-weight: 700;
       font-size: 16px;
       line-height: 1.6;
+      @include media('<sm') {
+        font-size: 14px;
+        line-height: 1.4;
+      }
     }
     blockquote {
       padding: 20px 0;
@@ -32,10 +44,74 @@
       margin-bottom: 20px;
       font-size: inherit;
     }
-    img {
+    img:not(.cs--article__img-crop) {
       overflow: hidden;
       margin-bottom: 20px;
       border-radius: 3px;
     }
+    ul,
+    ol {
+      @extend %listreset;
+      margin-bottom: 20px;
+    }
+    li {
+      padding-left: 35px;
+      &:not(:last-child) {
+        margin-bottom: 10px;
+      }
+    }
+    ul {
+      li {
+        --marker-size: 8px;
+        position: relative;
+        &:before {
+          content: '';
+          position: absolute;
+          top: 50%;
+          left: 12px;
+          width: var(--marker-size);
+          height: var(--marker-size);
+          border-radius: 50%;
+          background-color: var(--color-orange-50);
+          transform: translateY(-50%);
+        }
+      }
+    }
+    ol {
+      counter-reset: list;
+      li {
+        position: relative;
+        &:before {
+          counter-increment: list;
+          content: counter(list);
+          position: absolute;
+          top: 50%;
+          left: 12px;
+          color: var(--color-orange-50);
+          transform: translateY(-50%);
+        }
+      }
+    }
+  }
+  &__img-crop {
+    position: relative;
+    width: 100%;
+    padding-bottom: calc(100% / 3.3);
+    margin-bottom: 15px;
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  &__meta {
+    margin-bottom: 15px;
+    color: var(--color-grey-30);
+    font-size: 10px;
+    line-height: 1.4;
+    text-transform: uppercase;
   }
 }
