add connect page

--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -54,6 +54,9 @@
       }, {
         'title': 'Article News',
         'href': 'dashboard-news-article.html'
+      }, {
+        'title': 'Connect',
+        'href': 'dashboard-connect.html'
       }
     ]
   %}
