--- a/assets/html/dashboard-news-article.njk
+++ b/assets/html/dashboard-news-article.njk
@@ -65,7 +65,7 @@
       {% include './partials/components/landing/header.njk' %}
       <main class="cs--page cs--dashboard--news-article">
         <div class="cs--container">
-          <h1 class="cs--dashboard--news-article__title">Latest News</h1>
+          <h1 class="cs--page__title">Latest News</h1>
           <div class="cs--page-side-wrapper">
             <article class="cs--article">
               <div class="cs--article__content">
