--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -79,7 +79,7 @@ $media-expressions: (
   --color-blue-60: hsl(221, 83%, 18%);
   --color-blue-70: hsl(221, 90%, 15%);
   --color-blue-80: hsl(221, 93%, 12%);
-   --color-blue-85: hsl(221, 92%, 10%);
+  --color-blue-85: hsl(221, 92%, 10%);
   --color-blue-90: hsl(220, 92%, 10%);
   --color-blue-100: hsl(222, 89%, 7%);
   --color-grey-blue-10: hsl(223, 21%, 28%);
@@ -87,7 +87,7 @@ $media-expressions: (
   --color-orange-30: hsl(25, 98%, 62%);
   --color-orange-50: hsl(22, 90%, 59%);
   --color-green-30: hsl(140, 81%, 40%);
-  // --c: #F57D38;
+  // --c: #02102F;
 
   --grad-blue: linear-gradient(86.88deg, #00c6fb 1.95%, #005bea 97.83%);
   --grad-orange: linear-gradient(271.95deg, #fb7e37 14.29%, #ff9a44 98.96%);
