--- a/assets/scss/layout/page.scss
+++ b/assets/scss/layout/page.scss
@@ -6,6 +6,10 @@
     align-items: stretch;
     min-height: 100vh;
   }
+  &__title {
+    font-weight: 700;
+    font-size: 22px;
+  }
   &__bg {
     position: absolute;
     top: 0;
