--- a/assets/html/dashboard-faq.njk
+++ b/assets/html/dashboard-faq.njk
@@ -49,7 +49,7 @@
       <main class="cs--page cs--dashboard--faq">
         <section class="cs--section">
           <div class="cs--container">
-            <h1 class="cs--dashboard--faq__title">Frequenty Asked Questions</h1>
+            <h1 class="cs--page__title">Frequenty Asked Questions</h1>
             {{ detailsList(itemList) }}
           </div>
         </section>
