--- a/assets/html/dashboard-news.njk
+++ b/assets/html/dashboard-news.njk
@@ -120,7 +120,7 @@
         <section class="cs--section">
           <div class="cs--container">
             <div class="cs--dashboard--news__head">
-              <h1 class="cs--dashboard--news__title">Latest News</h1>
+              <h1 class="cs--page__title">Latest News</h1>
               <form class="cs--card-filter__form">
                 {{ cardFilter(filterList) }}
                 <label for="card-filter-search" class="cs--card-filter__search-wrapper">
