--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -50,9 +50,14 @@ $media-expressions: (
   --lg: #{map-get($breakpoints, 'lg')};
   --xlg: #{map-get($breakpoints, 'xlg')};
 
+  // padding
+  --padding-xxlg: 80px;
+  --padding-md: 30px;
+  --padding-sm: 25px;
+  --padding-xs: 15px;
   // container
   --container-width: var(--xlg);
-  --container-padding: 80px;
+  --container-padding: var(--padding-xxlg);
   // header size
   --landing-header-width: 0;
   --landing-header-height: 0;
@@ -143,15 +148,16 @@ $media-expressions: (
 
   @include media('<xlg') {
     --container-width: var(--lg);
-    --container-padding: 30px;
+    --container-padding: var(--padding-md);
   }
   @include media('<lg') {
     --container-width: var(--md);
   }
   @include media('<md') {
     --container-width: var(--sm);
+    --container-padding: var(--padding-sm);
   }
   @include media('<xs') {
-    --container-padding: 15px;
+    --container-padding: var(--padding-xs);
   }
 }
