--- a/assets/html/registration-verify-email.njk
+++ b/assets/html/registration-verify-email.njk
@@ -46,7 +46,7 @@
           <form id="{{ form.id }}" class="cs--reg-form">
             {% for input in inputs %}
               <label for="{{ input.name }}" class="cs--reg-form__input-wrapper">
-                {{ icon(input.icon) }}
+                <div class="cs--reg-form__input-icon">{{ icon(input.icon) }}</div>
                 <input id="{{ input.name }}" type="{{ input.type }}" class="cs--reg-form__input" placeholder="{{ input.placeholder }}">
               </label>
             {% endfor %}
