--- a/assets/scss/components/article.scss
+++ b/assets/scss/components/article.scss
@@ -11,6 +11,8 @@
     justify-content: space-between;
     .cs--btn {
       width: 120px;
+      padding-top: 12px;
+      padding-bottom: 12px;
       font-size: 12px;
       @include media('<sm') {
         width: auto;
