--- a/assets/scss/pages/dashboard/faq.scss
+++ b/assets/scss/pages/dashboard/faq.scss
@@ -3,14 +3,13 @@
   @include media('<sm') {
     padding: 40px 0 40px;
   }
-  &__title {
+  .cs--page__title {
     margin-bottom: 25px;
-    font-size: 22px;
   }
   .cs--container {
     padding: 0 195px 0 100px;
     @include media('<xlg') {
-      padding: 0 var(--container-padding);
+      padding: 0 var(--padding-sm);
     }
   }
 }
