--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -57,6 +57,9 @@
       }, {
         'title': 'Connect',
         'href': 'dashboard-connect.html'
+      }, {
+        'title': 'New Support Ticket',
+        'href': 'dashboard-new-ticket.html'
       }
     ]
   %}
