--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -71,6 +71,7 @@ $media-expressions: (
   --color-grey-15: hsl(0, 0%, 88%);
   --color-grey-20: hsl(0, 0%, 84%);
   --color-grey-30: hsl(0, 0%, 71%);
+  --color-grey-40: hsl(0, 0%, 67%);
   --color-grey-70: hsl(0, 0%, 45%);
   --color-grey-80: hsl(0, 0%, 40%);
   --color-grey-100: hsl(0, 0%, 13%);
