--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -52,6 +52,7 @@ $media-expressions: (
 
   // padding
   --padding-xxlg: 80px;
+  --padding-xlg: 60px;
   --padding-md: 30px;
   --padding-sm: 25px;
   --padding-xs: 15px;
