--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -60,6 +60,9 @@
       }, {
         'title': 'New Support Ticket',
         'href': 'dashboard-new-ticket.html'
+      }, {
+        'title': 'Preferences',
+        'href': 'dashboard-preferences.html'
       }
     ]
   %}
