--- a/assets/scss/components/reg-form.scss
+++ b/assets/scss/components/reg-form.scss
@@ -16,6 +16,8 @@
     top: 50%;
     left: 20px;
     display: flex;
+    width: 20px;
+    height: 20px;
     transform: translateY(-50%);
   }
   &__checkbox-wrapper {
