--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -63,6 +63,13 @@
       }, {
         'title': 'Preferences',
         'href': 'dashboard-preferences.html'
+      }, {
+        'title': '2FA - general',
+        'href': 'dashboard-2fa-general.html'
+      }
+      , {
+        'title': '2FA - step-1',
+        'href': 'dashboard-2fa-step-1.html'
       }
     ]
   %}
