--- a/assets/scss/components/dashboard/form.scss
+++ b/assets/scss/components/dashboard/form.scss
@@ -1,4 +1,6 @@
 .cs--dashboard-form {
+  display: flex;
+  flex-direction: column;
   padding: 25px 35px 50px;
   background-color: var(--color-blue-85);
   box-shadow: 0px 0px 30px hsla(209, 62%, 32%, 0.15);
@@ -6,6 +8,25 @@
     margin-bottom: 20px;
     font-weight: 700;
     font-size: 14px;
+    &--mark {
+      --marker-size: 12px;
+      position: relative;
+      padding-left: 20px;
+      &:before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: var(--marker-size);
+        height: var(--marker-size);
+        border-radius: 50%;
+        background-color: var(--color-orange-50);
+        transform: translateY(-50%);
+      }
+    }
+  }
+  &__sub-title {
+    font-size: 12px;
   }
   &__item {
     display: flex;
@@ -109,6 +130,40 @@
         place-self: center;
         background-color: #0096f3;
         opacity: 0;
+      }
+    }
+  }
+  &__nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .cs--btn {
+      @include media('<sm') {
+        width: auto;
+        padding: 8px 16px;
+        border-radius: 25px;
+      }
+    }
+  }
+  &__market-group {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 30px;
+    align-self: center;
+    padding: 120px 0;
+    @include media('<sm') {
+      grid-template-columns: 1fr;
+    }
+    & > * {
+      display: flex;
+      @include animate(box-shadow);
+      @include media('hover') {
+        &:hover {
+          box-shadow: 0px 0px 20px rgba(31, 83, 132, 0.7);
+        }
+      }
+      img {
+        width: 100%;
       }
     }
   }
