--- a/assets/scss/pages/dashboard/2fa.scss
+++ b/assets/scss/pages/dashboard/2fa.scss
@@ -1,4 +1,4 @@
-.cs--dashboard--preferences {
+.cs--dashboard--2fa {
   padding: 35px 0 30px;
   .cs--container {
     padding: 0 var(--padding-xlg) 0 100px;
@@ -18,20 +18,8 @@
     }
   }
   .cs--dashboard-form {
-    &__item {
-      width: 50%;
-      @include media('<sm') {
-        width: 100%;
-      }
-    }
-    &__label {
-      margin-bottom: 20px;
-      &:not(.cs--dashboard-form__label--radio) {
-        color: var(--color-grey-blue-50);
-      }
-      &--radio {
-        margin-bottom: 0;
-      }
+    &__sub-title {
+      margin-left: 20px;
     }
   }
 }
