add page 2fa. update dashboard form pages

--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -66,10 +66,12 @@
       }, {
         'title': '2FA - general',
         'href': 'dashboard-2fa-general.html'
-      }
-      , {
+      }, {
         'title': '2FA - step-1',
         'href': 'dashboard-2fa-step-1.html'
+      }, {
+        'title': '2FA - step-2',
+        'href': 'dashboard-2fa-step-2.html'
       }
     ]
   %}
