--- a/assets/html/dashboard-2fa-general.njk
+++ b/assets/html/dashboard-2fa-general.njk
@@ -60,7 +60,9 @@
           <div class="cs--page-side-wrapper">
             <form class="cs--dashboard-form">
               <h2 class="cs--dashboard-form__title">Enabling 2FA (2 Factor Authentication) is highly recommended. This adds an extra layer of security to your account in addition to your password.</h2>
-              <button type="submit" class="cs--btn cs--btn-grad-blue">Enable</button>
+              <div class="cs--dashboard-form__btn-group">
+                <button type="submit" class="cs--btn cs--btn-grad-blue">Enable</button>
+              </div>
             </form>
             {{ pageSide(side) }}
           </div>
