--- a/assets/html/dashboard-2fa-step-1.njk
+++ b/assets/html/dashboard-2fa-step-1.njk
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>CryptoSystem - 2FA - General</title>
+    <title>CryptoSystem - 2FA - Step 1</title>
     <link
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>₿</text></svg>"
@@ -69,7 +69,7 @@
                   <img src="./img/google-play-badge.svg" alt="">
                 </a>
               </div>
-              <div class="cs--dashboard-form__nav">
+              <div class="cs--dashboard-form__btn-group">
                 <button type="button" class="cs--btn cs--btn-transparent-grad-blue">Back</button>
                 <button type="submit" class="cs--btn cs--btn-grad-blue">I have the App</button>
               </div>
