--- a/assets/html/dashboard-new-ticket.njk
+++ b/assets/html/dashboard-new-ticket.njk
@@ -61,7 +61,9 @@
               {% for input in inputList %}
                 {{ dashInput(input) }}
               {% endfor %}
-              <button type="submit" class="cs--btn cs--btn-grad-blue">Create New Ticket</button>
+              <div class="cs--dashboard-form__btn-group">
+                <button type="submit" class="cs--btn cs--btn-grad-blue">Create New Ticket</button>
+              </div>
             </form>
           </div>
         </div>
