--- a/assets/html/dashboard-preferences.njk
+++ b/assets/html/dashboard-preferences.njk
@@ -101,7 +101,9 @@
               <hr>
               <h2 class="cs--dashboard-form__title">Preferred Currency</h2>
               {{ dashInput(inputCurrency) }}
-              <button type="submit" class="cs--btn cs--btn-grad-blue">Save changes</button>
+              <div class="cs--dashboard-form__btn-group">
+                <button type="submit" class="cs--btn cs--btn-grad-blue">Save changes</button>
+              </div>
             </form>
             {{ pageSide(side) }}
           </div>
