--- a/assets/scss/components/dashboard/form.scss
+++ b/assets/scss/components/dashboard/form.scss
@@ -34,9 +34,6 @@
     & + .cs--dashboard-form__item {
       margin-top: 15px;
     }
-    & + .cs--btn {
-      margin-top: 40px;
-    }
   }
   &__label {
     margin-bottom: 10px;
@@ -133,10 +130,11 @@
       }
     }
   }
-  &__nav {
+  &__btn-group {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-top: 40px;
     .cs--btn {
       @include media('<sm') {
         width: auto;
@@ -165,6 +163,52 @@
       img {
         width: 100%;
       }
+    }
+  }
+  &__qr {
+    &-wrapper {
+      display: grid;
+      grid-template-columns: 144px 1fr;
+      grid-gap: 60px;
+      padding: 70px 0 80px;
+      @include media('<lg') {
+        grid-gap: 30px;
+      }
+      @include media('<sm') {
+        grid-template-columns: 1fr;
+        padding: 30px 0 35px;
+      }
+    }
+    &-code {
+      --qr-code-width: 100%;
+      position: relative;
+      flex-shrink: 0;
+      place-self: center;
+      width: var( --qr-code-width);
+      padding-bottom: var( --qr-code-width);
+      @include media('<sm') {
+        --qr-code-width: 50%;
+      }
+      @include media('<xs') {
+        --qr-code-width: 75%;
+      }
+      & > * {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    &-content {
+      align-self: center;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.8;
+    }
+    &-text {
+      margin-bottom: 20px;
+      font-weight: 12px;
     }
   }
   .cs--btn {
