--- a/assets/html/dashboard-2fa-disable.njk
+++ b/assets/html/dashboard-2fa-disable.njk
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>CryptoSystem - 2FA - Step 1</title>
+    <title>CryptoSystem - 2FA - Disable</title>
     <link
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>₿</text></svg>"
@@ -59,19 +59,9 @@
           <h1 class="cs--page__title">2 Factor Authentication</h1>
           <div class="cs--page-side-wrapper">
             <form class="cs--dashboard-form">
-              <h2 class="cs--dashboard-form__title cs--dashboard-form__title--mark">Step 1</h2>
-              <h3 class="cs--dashboard-form__sub-title">Download the Google Authenticator App</h3>
-              <div class="cs--dashboard-form__market-group">
-                <a href="javascript:void(0)">
-                  <img src="./img/app-store-badge.svg" alt="">
-                </a>
-                <a href="javascript:void(0)">
-                  <img src="./img/google-play-badge.svg" alt="">
-                </a>
-              </div>
+              <h2 class="cs--dashboard-form__title">2FA (2 Factor Authentication) is Enabled. We do not recommended disabling 2FA, howere if you need to do so for some reason, click “Disable”</h2>
               <div class="cs--dashboard-form__btn-group">
-                <button type="button" class="cs--btn cs--btn-transparent-grad-blue">Back</button>
-                <button type="submit" class="cs--btn cs--btn-grad-blue ml-auto">I have the App</button>
+                <button type="submit" class="cs--btn cs--btn-grad-blue">Disable</button>
               </div>
             </form>
             {{ pageSide(side) }}
