--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -72,6 +72,21 @@
       }, {
         'title': '2FA - step-2',
         'href': 'dashboard-2fa-step-2.html'
+      }, {
+        'title': '2FA - step-3',
+        'href': 'dashboard-2fa-step-3.html'
+      }, {
+        'title': '2FA - step-4',
+        'href': 'dashboard-2fa-step-4.html'
+      }, {
+        'title': '2FA - disable',
+        'href': 'dashboard-2fa-disable.html'
+      }, {
+        'title': '2FA - disable 2',
+        'href': 'dashboard-2fa-disable-2.html'
+      }, {
+        'title': '2FA - disable complete',
+        'href': 'dashboard-2fa-disable-done.html'
       }
     ]
   %}
