--- a/assets/scss/abstracts/helpers.scss
+++ b/assets/scss/abstracts/helpers.scss
@@ -59,3 +59,12 @@
 .ellipsis {
   @include ellipsis;
 }
+
+.m {
+  &l-auto {
+    margin-left: auto;
+  }
+  &r-auto {
+    margin-right: auto;
+  }
+}
