--- a/assets/scss/components/dashboard/form.scss
+++ b/assets/scss/components/dashboard/form.scss
@@ -26,6 +26,7 @@
     }
   }
   &__sub-title {
+    margin-bottom: 40px;
     font-size: 12px;
   }
   &__item {
@@ -49,6 +50,11 @@
       }
     }
   }
+  &__input-wrapper {
+    --side-padding: 15px;
+    --arrow-size: 6px;
+    position: relative;
+  }
   &__input {
     width: 100%;
     padding: 10px 20px;
@@ -64,11 +70,6 @@
           opacity: 1;
         }
       }
-    }
-    &-wrapper {
-      --side-padding: 15px;
-      --arrow-size: 6px;
-      position: relative;
     }
     &--arrow {
       &:after {
@@ -133,7 +134,6 @@
   &__btn-group {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     margin-top: 40px;
     .cs--btn {
       @include media('<sm') {
@@ -148,9 +148,10 @@
     grid-template-columns: auto auto;
     grid-gap: 30px;
     align-self: center;
-    padding: 120px 0;
+    padding: 80px 0;
     @include media('<sm') {
       grid-template-columns: 1fr;
+      padding: 40px 0;
     }
     & > * {
       display: flex;
@@ -170,13 +171,13 @@
       display: grid;
       grid-template-columns: 144px 1fr;
       grid-gap: 60px;
-      padding: 70px 0 80px;
+      padding: 30px 0 40px;
       @include media('<lg') {
         grid-gap: 30px;
       }
       @include media('<sm') {
         grid-template-columns: 1fr;
-        padding: 30px 0 35px;
+        padding: 0;
       }
     }
     &-code {
@@ -184,8 +185,8 @@
       position: relative;
       flex-shrink: 0;
       place-self: center;
-      width: var( --qr-code-width);
-      padding-bottom: var( --qr-code-width);
+      width: var(--qr-code-width);
+      padding-bottom: var(--qr-code-width);
       @include media('<sm') {
         --qr-code-width: 50%;
       }
@@ -209,6 +210,33 @@
     &-text {
       margin-bottom: 20px;
       font-weight: 12px;
+    }
+  }
+  &__result {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 110px 0 20px;
+    @include media('<sm') {
+      padding: 40px 0 20px;
+    }
+    &-img {
+      margin-bottom: 30px;
+    }
+    &-title {
+      margin-bottom: 30px;
+      font-weight: 700;
+      font-size: 36px;
+      text-align: center;
+      @include media('<sm') {
+        margin-bottom: 20px;
+        font-size: 24px;
+      }
+    }
+    &-text {
+      max-width: 400px;
+      font-size: 12px;
+      text-align: center;
     }
   }
   .cs--btn {
