add support page. add component table

--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -87,6 +87,9 @@
       }, {
         'title': '2FA - disable complete',
         'href': 'dashboard-2fa-disable-done.html'
+      }, {
+        'title': 'Support',
+        'href': 'dashboard-support.html'
       }
     ]
   %}
