--- a/assets/scss/pages/dashboard/news-article.scss
+++ b/assets/scss/pages/dashboard/news-article.scss
@@ -5,6 +5,9 @@
     @include media('<xlg') {
       padding: 0 var(--padding-sm);
     }
+    @include media('<xs') {
+      padding: 0 var(--padding-xs);
+    }
   }
   .cs--page__title {
     margin-bottom: 20px;
