--- a/assets/scss/abstracts/helpers.scss
+++ b/assets/scss/abstracts/helpers.scss
@@ -68,3 +68,23 @@
     margin-right: auto;
   }
 }
+
+.no-wrap {
+  white-space: nowrap;
+}
+
+.cs--color-success {
+  color: var(--color-green-60);
+}
+
+.w {
+  &-25 {
+    width: 25vw;
+  }
+  &-50 {
+    width: 50vw;
+  }
+  &-75 {
+    width: 75vw;
+  }
+}
