--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -94,6 +94,7 @@ $media-expressions: (
   --color-orange-30: hsl(25, 98%, 62%);
   --color-orange-50: hsl(22, 90%, 59%);
   --color-green-30: hsl(140, 81%, 40%);
+  --color-green-60: hsl(175, 49%, 40%);
   // --c: #02102F;
 
   --grad-blue: linear-gradient(86.88deg, #00c6fb 1.95%, #005bea 97.83%);
@@ -114,7 +115,7 @@ $media-expressions: (
   --base-font-size: 1.6rem;
   --base-line-height: 1.2;
   --base-text-color: var(--color-white);
-  --base-min-width: 320px;
+  --base-min-width: none;
 
   // Links base
   --base-link-color: var(--color-white);
