--- a/assets/scss/base/forms.scss
+++ b/assets/scss/base/forms.scss
@@ -20,7 +20,6 @@ textarea {
   outline: none;
   font-family: var(--form-font-family);
   line-height: 1;
-  resize: vertical;
   appearance: none;
 
   @include placeholder {
@@ -43,6 +42,7 @@ input[type='submit'] {
   appearance: none;
 }
 
-input[type='file'] {
+input[type='file'],
+select {
   font-family: var(--form-font-family);
 }
