--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -14,6 +14,7 @@
 @import 'card-filter';
 @import 'page-side';
 @import 'article';
+@import 'table';
 @import 'landing/header';
 @import 'landing/footer';
 @import 'dashboard/footer';
