--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -90,6 +90,9 @@
       }, {
         'title': 'Support',
         'href': 'dashboard-support.html'
+      }, {
+        'title': 'User Profile',
+        'href': 'dashboard-user-profile.html'
       }
     ]
   %}
