--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -95,7 +95,7 @@ $media-expressions: (
   --color-orange-50: hsl(22, 90%, 59%);
   --color-green-30: hsl(140, 81%, 40%);
   --color-green-60: hsl(175, 49%, 40%);
-  // --c: #02102F;
+  // --c: #040E26;
 
   --grad-blue: linear-gradient(86.88deg, #00c6fb 1.95%, #005bea 97.83%);
   --grad-orange: linear-gradient(271.95deg, #fb7e37 14.29%, #ff9a44 98.96%);
