--- a/assets/scss/components/dashboard/form.scss
+++ b/assets/scss/components/dashboard/form.scss
@@ -1,9 +1,17 @@
 .cs--dashboard-form {
+  --form-padding-top: 25px;
+  --form-padding-side: 35px;
+  --form-padding-bottom: 50px;
   display: flex;
   flex-direction: column;
-  padding: 25px 35px 50px;
+  padding: var(--form-padding-top) var(--form-padding-side) var(--form-padding-bottom);
   background-color: var(--color-blue-85);
   box-shadow: 0px 0px 30px hsla(209, 62%, 32%, 0.15);
+  @include media('<xs') {
+    --form-padding-top: 10px;
+    --form-padding-side: 15px;
+    --form-padding-bottom: 20px;
+  }
   &__title {
     margin-bottom: 20px;
     font-weight: 700;
@@ -246,6 +254,34 @@
     padding-top: 12px;
     padding-bottom: 12px;
     font-size: 12px;
+  }
+  .cs--table-wrapper {
+    margin: 0 calc(-1 * var(--form-padding-side)) calc(-1 * var(--form-padding-bottom));
+  }
+  .cs--table {
+    &--striped {
+      & > tbody {
+        & > tr {
+          &:nth-of-type(even) {
+            background-color: var(--color-blue-100);
+          }
+        }
+      }
+    }
+    tr {
+      * {
+        &:first-child {
+          padding-left: var(--form-padding-side);
+        }
+        &:last-child {
+          padding-right: var(--form-padding-side);
+        }
+      }
+    }
+    th {
+      background-color: transparent;
+      color: var(--color-grey-blue-50);
+    }
   }
 }
 select.cs--dashboard-form__input {
