add select exchange page. add new components

--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -93,6 +93,9 @@
       }, {
         'title': 'User Profile',
         'href': 'dashboard-user-profile.html'
+      }, {
+        'title': 'Select Exchange',
+        'href': 'dashboard-select-exchange.html'
       }
     ]
   %}
