--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -15,6 +15,8 @@
 @import 'page-side';
 @import 'article';
 @import 'table';
+@import 'exchange';
+@import 'bullet-list';
 @import 'landing/header';
 @import 'landing/footer';
 @import 'dashboard/footer';
