add page markets

--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -96,6 +96,9 @@
       }, {
         'title': 'Select Exchange',
         'href': 'dashboard-select-exchange.html'
+      }, {
+        'title': 'Markets',
+        'href': 'dashboard-markets.html'
       }
     ]
   %}
