--- a/assets/scss/base/typography.scss
+++ b/assets/scss/base/typography.scss
@@ -32,6 +32,20 @@ a {
   }
 }
 
-.cs--color-success {
-  color: var(--color-green-60);
+.cs--color {
+  &-primary {
+    color: var(--color-blue);
+  }
+  &-secondary {
+    color: var(--color-grey);
+  }
+  &-success {
+    color: var(--color-green);
+  }
+  &-danger {
+    color: var(--color-red);
+  }
+  &-warn {
+    color: var(--color-yellow);
+  }
 }
