--- a/assets/scss/components/article.scss
+++ b/assets/scss/components/article.scss
@@ -69,7 +69,7 @@
         &:before {
           content: '';
           position: absolute;
-          top: 50%;
+          top: calc(1em / 2);
           left: 12px;
           width: var(--marker-size);
           height: var(--marker-size);
@@ -87,7 +87,7 @@
           counter-increment: list;
           content: counter(list);
           position: absolute;
-          top: 50%;
+          top: calc(1em / 2);
           left: 12px;
           color: var(--color-orange-50);
           transform: translateY(-50%);
