--- a/assets/scss/components/table.scss
+++ b/assets/scss/components/table.scss
@@ -2,6 +2,8 @@
   overflow-x: auto;
 }
 .cs--table {
+  --cell-padding-x: 25px;
+  --cell-padding-y: 15px;
   width: 100%;
   border-collapse: collapse;
   &__title {
@@ -18,14 +20,48 @@
       }
     }
   }
-  &__cell--min-w {
-    min-width: 200px;
+  &--bordered {
+    & > tbody {
+      & > tr {
+        &:not(:last-child) {
+          border-bottom: 1px solid var(--color-blue-70);
+        }
+      }
+    }
+  }
+  &__cell {
+    &--min-w {
+      min-width: 200px;
+    }
+    &--chart {
+      min-width: calc(2 * var(--cell-padding-x) + 185px);
+    }
+  }
+  &__card {
+    display: grid;
+    grid-template-columns: 30px 1fr;
+    grid-gap: 20px;
+    align-items: center;
+    &-content {
+      display: flex;
+      flex-direction: column;
+    }
+    &-title {
+      font-weight: 700;
+      font-size: 13px;
+    }
+    &-abbr {
+      color: var(--color-grey-50);
+      font-weight: 300;
+    }
   }
   th,
   td {
-    padding: 15px 30px;
+    min-width: 100px;
+    padding: var(--cell-padding-y) var(--cell-padding-x);
     @include media('<sm') {
-      padding: 10px 15px;
+     --cell-padding-y: 10px;
+     --cell-padding-x: 15px;
     }
   }
   th {
